--- a/13-stripe-submenus/final/src/index.css
+++ b/13-stripe-submenus/final/src/index.css
@@ -426,6 +426,7 @@ Stripe Styles
   text-transform: capitalize;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .submenu-center svg {
   color: var(--clr-grey-5);
