removes button outline

--- a/1-birthday-reminder/setup/src/index.css
+++ b/1-birthday-reminder/setup/src/index.css
@@ -187,6 +187,6 @@ main {
   padding: 0.5rem 0;
   letter-spacing: var(--spacing);
   border-radius: var(--radius);
-  outline: 1px solid rgba(242, 138, 178, 0.8);
+  /* outline: 1px solid rgba(242, 138, 178, 0.8); */
   cursor: pointer;
 }
