completed reviews project

--- a/03-reviews/setup/src/index.css
+++ b/03-reviews/setup/src/index.css
@@ -250,3 +250,8 @@ main {
   background: var(--clr-primary-5);
   color: var(--clr-primary-1);
 }
+
+.icon {
+  color: blue;
+  font-size: 120px;
+}
