--- a/13-stripe-submenus/setup/src/index.css
+++ b/13-stripe-submenus/setup/src/index.css
@@ -58,8 +58,8 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: var(--clr-grey-10);
   color: var(--clr-grey-1);
   line-height: 1.5;
@@ -121,6 +121,11 @@ p {
 }
 /*  global classes */
 
+/*todo test*/
+.test {
+  /* background-image: url(./images/hero.svg); */
+}
+
 /* section */
 .section {
   width: 90vw;
@@ -177,7 +182,7 @@ Stripe Styles
   display: none;
 }
 .hero::before {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   height: 65%;
@@ -386,7 +391,7 @@ Stripe Styles
   transition: var(--transition);
 }
 .submenu::before {
-  content: '';
+  content: "";
   display: block;
   width: 0;
   height: 0;
