--- a/03-reviews/setup/src/index.css
+++ b/03-reviews/setup/src/index.css
@@ -60,8 +60,8 @@ Global Styles
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background: var(--clr-grey-10);
-  color: var(--clr-grey-1);
+  background: var(--clr-primary-1);
+  color: var(--clr-grey-9);
   line-height: 1.5;
   font-size: 0.875rem;
 }
