--- a/04-accordion/setup/src/index.css
+++ b/04-accordion/setup/src/index.css
@@ -63,7 +63,7 @@ Global Styles
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background: var(--clr-purple);
+  background: var(--clr-primary-3);
   color: var(--clr-grey-1);
   line-height: 1.5;
   font-size: 0.875rem;
@@ -205,7 +205,7 @@ main {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  color: var(--clr-red-special);
+  color: var(--clr-primary-1);
   cursor: pointer;
   margin-left: 1rem;
   align-self: center;
