--- a/03-reviews/setup/src/index.css
+++ b/03-reviews/setup/src/index.css
@@ -158,6 +158,8 @@ main {
 .container {
   width: 80vw;
   max-width: var(--fixed-width);
+  margin-left: 400px;
+  margin-top: 50px;
 }
 .review {
   background: var(--clr-white);
@@ -220,7 +222,11 @@ main {
 }
 .info {
   margin-bottom: 0.75rem;
+  font-size: 16px;
+  width: 500px;
+  margin-left: 50px;
 }
+
 .prev-btn,
 .next-btn {
   color: var(--clr-primary-7);
