--- a/04-accordion/setup/src/index.css
+++ b/04-accordion/setup/src/index.css
@@ -61,9 +61,9 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background: var(--clr-purple);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background: var(--clr-primary-4);
   color: var(--clr-grey-1);
   line-height: 1.5;
   font-size: 0.875rem;
