--- a/01-birthday-reminder/setup/src/index.css
+++ b/01-birthday-reminder/setup/src/index.css
@@ -57,8 +57,8 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: var(--clr-pink);
   color: var(--clr-grey-9);
   line-height: 1.5;
@@ -141,8 +141,8 @@ main {
 }
 
 .container {
-  width: 90vw;
-  margin: 5rem 0;
+  width: 100%;
+  margin: 0 auto;
   max-width: var(--fixed-width);
   background: var(--clr-white);
   border-radius: var(--radius);
