--- a/02-tours/setup/src/index.css
+++ b/02-tours/setup/src/index.css
@@ -58,8 +58,8 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: var(--clr-grey-10);
   color: var(--clr-grey-1);
   line-height: 1.5;
@@ -167,14 +167,14 @@ main {
   width: 6rem;
   height: 0.25rem;
   background: var(--clr-primary-5);
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto; */
+  margin: auto;
 }
 
 .single-tour {
   background: var(--clr-white);
   border-radius: var(--radius);
-  margin: 2rem 0;
+  margin: 2rem 20px;
   box-shadow: var(--light-shadow);
   transition: var(--transition);
 }
