Add css for style delete button

--- a/01-birthday-reminder/final/src/index.css
+++ b/01-birthday-reminder/final/src/index.css
@@ -156,7 +156,7 @@ main {
 }
 .person {
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: auto 1fr 1fr;
   column-gap: 0.75rem;
   margin-bottom: 1.5rem;
   align-items: center;
@@ -189,3 +189,22 @@ main {
   outline: 1px solid rgba(242, 138, 178, 0.8);
   cursor: pointer;
 }
+.container button.delete {
+  color: var(--clr-white);
+  display: inline;
+  border-color: transparent;
+  background: var(--clr-red-light);
+  margin: auto 2rem;
+  text-transform: capitalize;
+  font-size: 0.825rem;
+  padding: 0.35rem;
+  letter-spacing: var(--spacing);
+  border-radius: var(--radius);
+  outline: 1px solid rgba(255, 255, 255, 0.8);
+  cursor: pointer;
+  transition: all 0.3s ease-in;
+}
+.container button.delete:hover {
+  background: var(--clr-red-dark);
+}
+
